--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
       dockerfile: Dockerfile
       args:
         IPEXLLM_RELEASE_REPO: mattcurf/ollama-intel-gpu
-        IPEXLLM_RELEASE_VERSON: v0.0.2
-        IPEXLLM_PORTABLE_ZIP_FILENAME: ollama-ipex-llm-2.2.0b20250313-ubuntu.tar.gz
+        IPEXLLM_RELEASE_VERSON: v0.0.3
+        IPEXLLM_PORTABLE_ZIP_FILENAME:  ollama-ipex-llm-2.3.0b20250415-ubuntu.tgz
     container_name: ollama-intel-gpu
     restart: always
     devices:
