--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@ services:
       context: .
       dockerfile: Dockerfile
       args:
-        IPEXLLM_RELEASE_REPO: mattcurf/ollama-intel-gpu
-        IPEXLLM_RELEASE_VERSON: v0.0.3
-        IPEXLLM_PORTABLE_ZIP_FILENAME: ollama-ipex-llm-2.3.0b20250415-ubuntu.tgz
+        IPEXLLM_RELEASE_REPO: ipex-llm/ipex-llm
+        IPEXLLM_RELEASE_VERSON: v2.3.0-nightly
+        IPEXLLM_PORTABLE_ZIP_FILENAME: ollama-ipex-llm-2.3.0b20250710-ubuntu.tgz 
     container_name: ollama-intel-gpu
     restart: always
     devices:
